main.css
* {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
}


/*Global*/

html, body {
  width: 100%;
  margin: 0;
  padding: 0;
  font-family: helvetica, sans-serif;
  background-color: #f0fff0;
}


/*Func*/

.multi-level, .item ul, .nav input[type="checkbox"] {
  display: none;
}

#menu:checked ~ .multi-level, .item input:checked ~ ul {
  display: block;
}


/*Arrow*/

.arrow {
  width: 12px;
  height: 12px;
  vertical-align: middle;
  float: left;
  z-index: 0;
  margin: 7px 1em 0 2em;
}

.item input + .arrow {
  transform: rotate(-90deg);
  transition: 0.1s;
}

.item input:checked + .arrow {
  transform: rotate(0deg);
  transition: 0.1s;
}

div.nav > div {
  direction: rtl;
  overflow-y: scroll;
  max-height: 40vh;
}

div.nav > div > * {
  direction: ltr;
}

/*Styles*/

label:hover {
  cursor: pointer;
  color: #0000e0;
}

label {
  width: 100%;
  display: block;
  z-index: 3;
  position: relative;
}

.nav {
  width: 100%;
  background-color: #f0fff0;
  overflow-x: hidden;
  border-bottom: 1px solid #CFD8DC;
}

#nav-icon {
  font-size: 28px;
  line-height: 50px;
  padding-left: 1em;
  color: white;
  /* background-color: #F44336; */
}

.nav ul, .nav li, .nav label {
  line-height: 1.8;
  margin: 0;
  padding: 0 2em;
  list-style: none;
  text-decoration: none;
  /* color: #90A4AE; */
  font-weight: 100;
  width: 100%;
}

.item ul {
  padding: 0 0.25em;
}

.nav li a {
  line-height: 1.8;
  margin: 0;
  padding: 0 4em;
  list-style: none;
  text-decoration: none;
  /* color: #90A4AE; */
  color: black;
  font-weight: 100;
}

.nav li a:hover {
  color: #0000e0;
}


/* content */

h1 {
  color: white;
  background-color: green;
  margin-top: 0px;
  padding: 8px;
  width: 100%;
  text-align: center;
  font-size: 28px;
  position: absolute;
  top: 0px;
  left: auto;
  right: auto;
}

#help {
  padding: 1em 2em;
  position: absolute;
  top: 0px;
  right: 0px;
  color: white;
  text-decoration: none;
  z-index: 100;
}

#main {
  margin: 0px;
  padding: 1em 2em;
  background-color: white;
}

.hide {
  display: none;
}

#error {
  padding: 1em 2em;
  border: 2px solid red;
  background-color: orange;
  white-space: pre-wrap;
  font-family: monospace;
}

#outputTabel table, #outputWoorden table, #outputLemmas table {
  margin-top: .5em;
}

#outputTabel table, #outputTabel th, #outputTabel td,
#outputWoorden table, #outputWoorden th, #outputWoorden td,
#outputLemmas table, #outputLemmas th, #outputLemmas td {
  border: 1px solid #c0c0c0;
  border-collapse: collapse;
}

#outputTabel th, #outputTabel td,
#outputWoorden th, #outputWoorden td,
#outputLemmas th, #outputLemmas td {
  padding: .4em 1em;
  vertical-align: top;
}

#outputTabel tr > td:first-child,
#outputWoorden tr > td:first-child, #outputLemmas tr > td:first-child,
#outputWoorden tr > td:nth-child(2), #outputLemmas tr > td:nth-child(2) {
  text-align: right;
}

#outputWoorden tr.skip td,
#outputLemmas tr.skip td {
  text-align: center;
  background-color: #e0e0e0;
  padding: 1em 0px;
}

#outputTabel table.inner tr > td:first-child {
  text-align: left;
}

#outputTabel table.inner {
  background-color: #f0fff0;
  margin-bottom: 1em;
}

#outputZinnen a {
  color: black;
  text-decoration: none;
}

#outputZinnen a:hover {
  color: #0000EE;
}

#outputZinnen span.mark {
  background-color: #f0fff0;
  font-weight: bold;
}

#outputZinnen li {
  margin: 0.4em 0px;
}

#runner {
  margin: 1em 0px;
}

textarea {
  width: 100%;
}

#foot {
  padding: 1em 2em;
  border-top: 1px solid #CFD8DC;
  background-color: #f0fff0;
}

#foot a {
  text-decoration: none;
  color: #0000e0;
}

#wait {
  position: absolute;
  left: 8em;
}

div.inner {
  display: inline-block;
  margin-right: 1em;
}


/* dit maakt selecteren vanaf begin van de tekst makkelijker */
#lst li {
  padding-left: 1em;
}

td.string {
  background-color: #a0ffa0;
}

td.bool, td.float64 {
  text-align: right;
}

#permalink, #macros, #info, #saveTabel, #saveZinnen, #saveWoorde, #saveLemmas, #saveAttr {
  -webkit-box-shadow: 11px 10px 12px -6px rgba(0, 0, 0, 0.5);
  -moz-box-shadow: 11px 10px 12px -6px rgba(0, 0, 0, 0.5);
  box-shadow: 11px 10px 12px -6px rgba(0, 0, 0, 0.5);
  z-index: 10;
  position: fixed;
  left: 10%;
  right: 10%;
  top: 10em;
  border: 1px solid black;
  background-color: #f0fff0;
  padding: 2em;
  z-index: 100;
}

#backdrop {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  background: rgba(0, 0, 0, 0.5);
  z-index: 10;
  backdrop-filter: blur(2px) saturate(60%);
}

#info {
  max-width: 60em;
}

#infoContent {
  margin-bottom: 2em;
  overflow-y: auto;
  max-height: 40vh;
  line-height: 1.5;
  padding: 1em;
  background-color: white;
  border: 1px solid lightgray;
}

#infoContent h2 {
  font-size: x-large;
  font-weight: 300;
}

#infoContent table tr>td {
  padding: 0px .7em;
}

#permatext {
  width: 100%;
}

.bold {
  font-weight: bold;
  border: 4px solid #FF6600;
}

#paging, #saveTabelButton, #saveZinnenButton, #saveWoordenButton, #saveLemmasButton {
  margin-top: 1em;
}

#output > div {
  display: none;
}

#output.error > #error {
  display: block;
}

#output.warning > #warning,
#output.warning > #runner {
  display: block;
}

#output.run > #runner {
  display: block;
}

#output.tabel #outputTabel,
#output.tabel #buttons,
#output.tabel #runner,
body.ready #output.tabel #paging,
body.ready #output.tabel #saveTabelButton {
  display: block;
}

#output.zinnen #outputZinnen,
#output.zinnen #buttons,
#output.zinnen #runner,
body.ready #output.zinnen #paging,
body.ready #output.zinnen #saveZinnenButton {
  display: block;
}

#output.woorden #outputWoorden,
#output.woorden #runner,
#output.woorden #buttons,
#output.woorden #saveWoordenButton {
  display: block;
}

#output.lemmas #outputLemmas,
#output.lemmas #runner,
#output.lemmas #buttons,
#output.lemmas #saveLemmasButton {
  display: block;
}

